task_3/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
spec:
  type: ClusterIP
  ports:
  - port: 9000
    protocol: TCP
    name: web
  selector:
    app: minio
